--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "idavoll/user-module",
+  "name": "bikmazer/user-module",
   "type": "asgard-module",
   "description": "User module for AsgardCMS. Handles the authentication and authorisation as well as the user management.",
   "keywords": [
@@ -24,14 +24,9 @@
   "require": {
     "php": ">=7.0.0",
     "composer/installers": "~1.0",
-    "ramsey/uuid": "^3.4"
+    "ramsey/uuid": "^4.0"
   },
-  "require-dev": {
-    "phpunit/phpunit": "~6.0",
-    "orchestra/testbench": "3.5.*",
-    "scrutinizer/ocular": "~1.1",
-    "fzaninotto/faker": "~1.5",
-    "mockery/mockery": "^0.9.4"
+  "require-dev": { 
   },
   "autoload": {
     "psr-4": {
